# ddsp

./: .env  .gitignore  AGENTS.md  README.md  REFACTORING.md  activate_gpu.sh  check_cuda.py  conftest.py  ddsp_env.yml  environment_gpu.yml  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: build.yml
ddsp/: __init__.py  dags_test.py  losses.py  losses_test.py  spectral_ops.py  spectral_ops_test.py
ddsp/training/: ddsp_export.py  ddsp_run.py  summaries.py
ddsp/training/data_preparation/: ddsp_prepare_tfrecord.py  prepare_tfrecord_lib.py  prepare_tfrecord_lib_test.py
ddsp/training/models/: autoencoder_test.py
etc/conda/activate.d/: ddsp_install.sh
etc/conda/deactivate.d/: ddsp_uninstall.sh
