[build-system]
requires = ["hatchling", "setuptools>=60.0.0,<70.0.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "ddsp"
dynamic = ["version"]
description = "Differentiable Digital Signal Processing"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Google Inc.", email = "no-reply@google.com"}
]
keywords = ["audio", "dsp", "signalprocessing", "machinelearning", "music"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "absl-py",
    "apache-beam",
    "cloudml-hypertune<=0.1.0.dev6",
    "crepe<=0.0.13",
    "dill<=0.3.4",
    "future",
    "gin-config>=0.3.0",
    "google-cloud-storage",
    "librosa>=0.10,<0.11",
    "protobuf<=3.20",
    "mir_eval<=0.7",
    "note_seq<0.0.4",
    "numpy<1.24",
    "scipy>=1.10.1,<1.12",
    "six",
    "tensorflow>=2.11,<2.16",
    "tensorflowjs<3.19",
    "tensorflow-probability>=0.18,<0.22",
    "tensorflow-datasets>=4.9,<5.0",
    "matplotlib>=3.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cudnn-cu12>=8.9,<9.0",
    "nvidia-cublas-cu12>=12.0,<13.0",
    "nvidia-cuda-runtime-cu12>=12.2,<13.0",
    "nvidia-cuda-nvrtc-cu12>=12.0,<13.0",
    "nvidia-cuda-nvcc-cu12>=12.0,<13.0",
    "nvidia-cufft-cu12>=11.0,<12.0",
    "nvidia-curand-cu12>=10.3,<11.0",
    "nvidia-cusolver-cu12>=11.4,<12.0",
    "nvidia-cusparse-cu12>=12.0,<13.0",
    "nvidia-nvjitlink-cu12>=12.0,<13.0",
]
gpu = ["ddsp[cuda]"]
gcp = ["gevent", "google-api-python-client", "google-compute-engine", "oauth2client"]
data_preparation = ["apache_beam", "pyparsing<=2.4.7"]
dev = ["pytest>=8.0", "ruff>=0.3.0", "uv"]
test = ["pytest>=8.0", "ruff>=0.3.0"]

[project.scripts]
ddsp_export = "ddsp.training.ddsp_export:console_entry_point"
ddsp_run = "ddsp.training.ddsp_run:console_entry_point"
ddsp_prepare_tfrecord = "ddsp.training.data_preparation.ddsp_prepare_tfrecord:console_entry_point"
ddsp_generate_synthetic_dataset = "ddsp.training.data_preparation.ddsp_generate_synthetic_dataset:console_entry_point"
ddsp_ai_platform = "ddsp.training.docker.ddsp_ai_platform:console_entry_point"

[project.urls]
Homepage = "https://github.com/magenta/ddsp"
Repository = "https://github.com/magenta/ddsp"
Documentation = "https://github.com/magenta/ddsp"

[tool.hatch.version]
path = "ddsp/version.py"

[tool.hatch.build.targets.wheel]
packages = ["ddsp"]

[tool.hatch.build.targets.wheel.force-include]
"ddsp/training/gin" = "ddsp/training/gin"

[tool.ruff]
target-version = "py311"
line-length = 80
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E111", "E114", "E501", "UP015"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = 'single'
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["ddsp"]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -v"
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning", "ignore::FutureWarning"]
